syntax = "proto3";

package streamverse.auth.v1;

option go_package = "github.com/streamverse/proto/gen/go/auth/v1";

import "google/protobuf/timestamp.proto";

// Auth service definition
service AuthService {
  rpc Register(RegisterRequest) returns (AuthResponse);
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (AuthResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);
}

// User message
message User {
  string id = 1;
  string email = 2;
  string name = 3;
  repeated string roles = 4;
  google.protobuf.Timestamp created_at = 5;
}

// Request/Response messages
message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message LogoutRequest {
  string token = 1;
}

message VerifyTokenRequest {
  string token = 1;
}

message AuthResponse {
  string access_token = 1;
  string refresh_token = 2;
  User user = 3;
  int64 expires_in = 4;
}

message LogoutResponse {
  bool success = 1;
}

message VerifyTokenResponse {
  bool valid = 1;
  User user = 2;
}

