syntax = "proto3";

package content;

option go_package = "github.com/streamverse/proto/gen/go/content";

import "google/protobuf/timestamp.proto";

// The content service definition.
service ContentService {
  // Gets content by ID.
  rpc GetContent(GetContentRequest) returns (GetContentResponse);
}

// The request message containing the content ID.
message GetContentRequest {
  string content_id = 1;
}

// The response message containing the content.
message GetContentResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  int64 duration = 4;
  bool is_drm_protected = 5;
  string drm_type = 6;
}
